--- a/config.env
+++ b/config.env
@@ -1,9 +1,9 @@
 #Required Vars
-BOT_TOKEN = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-FSUB_ID = ""
-DUMP_CHAT_ID = ""
+BOT_TOKEN = "7796948974:AAEoKRvp1u1m41Z3U4UBDHt70jU9EhBay8o"
+TELEGRAM_API = "21939922"
+TELEGRAM_HASH = "bd2d18dd26b200480bda4cbdf2c2da30"
+FSUB_ID = "-1002723406694 "
+DUMP_CHAT_ID = "8036538517"
 
 #Optional
 USER_SESSION_STRING = ""
